// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadAsync errors if loading fails 1`] = `
<div>
  Error! Component failed to load
</div>
`;

exports[`LoadAsync renders \`loading\` if loading is slow 1`] = `
<div>
  Loading...
</div>
`;

exports[`LoadAsync renders loading element 1`] = `
<div
  className="View__View-jelnfZ bnYeJt"
>
  <h1
    className="Title__Title-lbDhID gxinMP"
  />
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    Here's some private information about you
  </p>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    You can log out and try another user by clicking the log out button
  </p>
  <button
    className="Button__Button-jkHDFw jHVgyi"
    onClick={undefined}
  >
    Log out
  </button>
</div>
`;
